# isodatetime

./: .codecov.yml  .coveragerc  .eslintignore  .gitignore  .mailmap  .travis.yml  CHANGES.md  CONTRIBUTING.md  README.md  conftest.py  isodatetime.py  isoparsers.py  isotests.py  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/: create_release_pr.js  dependabot.yml  package-lock.json  package.json
.github/lib/: comment_on_pr.js  create_release_pr.js  util.js
.github/workflows/: auto_draft_release.yml  auto_publish_release.yml  build.yml  create_release_pr.yml  style_test.yml  test.yml  update_copyright.yml
isodatetime/: __init__.py  data.py  datetimeoper.py  dumpers.py  main.py  parser_spec.py  parsers.py  run_tests  testdatetimeoper.py  tests.py  timezone.py  util.py
isodatetime/tests/: __init__.py  test_00.py  test_datetimeoper.py  test_main.py  test_time_point.py
metomi/isodatetime/: __init__.py  data.py  datetimeoper.py  dumpers.py  exceptions.py  main.py  parser_spec.py  parsers.py  timezone.py
metomi/isodatetime/tests/: __init__.py  conftest.py  test_00.py  test_01.py  test_datetimeoper.py  test_exceptions.py  test_main.py  test_parser.py  test_time_point.py  test_timezone.py
